# arrow

./: .gitignore  CMakeLists.txt  LICENSE  README.md  default.do
src/: checks.h  handle.h  lexer.cc  lexer.h  local-stack.h  local_stack.h  main.cc  member-handle-hooks.h  member.h  optional.h  persistent-pool.h  persistent_pool.h  storage-descriptor.h  storage_descriptor.h  type-storage.h  type_storage.h
src/base/: checks.cc  checks.h
src/storage/: handle.h  local.h  local_stack.h  member.h  member_handle_hooks.h  newable.h  persistent_pool.h  storage_descriptor.h  type_storage.h
test/base/: checks_test.cc
test/cc/: checks_test.cc  handle_test.cc  local_stack_test.cc  member_handle_hooks_test.cc  optional_test.cc  persistent_pool_test.cc  storage_descriptor_test.cc  test-handle.cc  test-lexer.cc  test-local-stack.cc  test-main.cc  test-member-handle-hooks.cc  test-member.cc  test-optional.cc  test-persistent-pool.cc  test-storage-descriptor.cc  test-type-storage.cc  test_checks.cc  test_local_stack.cc  test_member_handle_hooks.cc  test_type_storage.cc  type_storage_test.cc
test/storage/: handle_test.cc  local_stack_test.cc  local_test.cc  member_handle_hooks_test.cc  member_test.cc  newable_test.cc  optional_test.cc  persistent_pool_test.cc  storage_descriptor_test.cc  type_storage_test.cc
